[BE] [partial] : 코드 리팩토링